Prevent ships from overlapping during their initial placement in the user's water

--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@ main {
 
 #aircraft-carrier, #battleship, #cruiser, #submarine, #destroyer {
     background-color: chocolate;
+    border: 1.5px solid red;
     position: absolute;
     top: 0;
     left: 0;
